--- a/paramore.css
+++ b/paramore.css
@@ -7,6 +7,7 @@ h1 {
 body {
     background-color: crimson;
     background-size: cover;
+    background-image: url("")
 }
 
 header {
@@ -26,7 +27,6 @@ header {
 a:hover {
     color: aqua;
     display: center;
-    
 }
 
 ul {
@@ -55,12 +55,4 @@ li a:hover:not(.active) {
 
 .active {
     background-color: crimson;
-}
-
-.Alist {
-    
-}
-
-.Avideos {
-    
 }
