--- a/aboutme.css
+++ b/aboutme.css
@@ -6,7 +6,8 @@ h1 {
 
 body {
     background-color: crimson;
-    background-size: cover;
+    background-size: auto;
+    background-image: url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSKX3B6hYkdKLekFHvmeQ25MKjUN2D7KmGwEG-24Tq5fmvDe75k");
 }
 
 header {
@@ -14,13 +15,14 @@ header {
 }
 
 .banner {
-    position: absolute;
     right: auto;
     top: auto;
-    display: inline;
+    display: inline-block;
     background-image: url("http://www.paramore.net/sites/g/files/g2000001591/f/styles/album_image_sidebar_v5/public/4a6563e0e31b5.jpg?itok=6ehnzCWz");
     background-size: auto;
     width: 100%;
+    border: 3px solid crimson;
+    color: crimson;
 }
 
 a:hover {
