--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ h1 {
 
 body {
     background-size: auto;
-    background-image: url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSKX3B6hYkdKLekFHvmeQ25MKjUN2D7KmGwEG-24Tq5fmvDe75k")
+    background-image: url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSKX3B6hYkdKLekFHvmeQ25MKjUN2D7KmGwEG-24Tq5fmvDe75k");
 }
 
 header {
