--- a/aboutme.css
+++ b/aboutme.css
@@ -5,8 +5,6 @@ h1 {
 }
 
 body {
-    background-color: crimson;
-    background-size: auto;
     background-image: url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSKX3B6hYkdKLekFHvmeQ25MKjUN2D7KmGwEG-24Tq5fmvDe75k");
 }
 
@@ -56,4 +54,15 @@ li a:hover:not(.active) {
 
 .active {
     background-color: crimson;
+}
+
+p {
+    color: crimson;
+    padding-top: 25px;
+    padding-right: 25px;
+    padding-bottom: 25px;
+    padding-left: 25px;
+    border: 5px solid crimson;
+    background-image: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTbUZxhzUZskWVSXV2MYR0gy1h7th7HTBaHKNmSzuXJJHVfcNc_");
+    text-align: center;
 }
