--- a/paramore.css
+++ b/paramore.css
@@ -6,7 +6,7 @@ h1 {
 
 body {
     background-size: auto;
-    background-image: url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSKX3B6hYkdKLekFHvmeQ25MKjUN2D7KmGwEG-24Tq5fmvDe75k");
+    background-image: url("/images/paramorebackimg.jpg");
 }
 
 header {
@@ -17,7 +17,7 @@ header {
     right: auto;
     top: auto;
     display: inline-block;
-    background-image: url("http://www.paramore.net/sites/g/files/g2000001591/f/styles/album_image_sidebar_v5/public/4a6563e0e31b5.jpg?itok=6ehnzCWz");
+    background-image: url("/images/paramoreheaderimg.jpg");
     background-size: auto;
     width: 100%;
     border: 3px solid crimson;
@@ -64,6 +64,6 @@ h2 {
     padding-bottom: 25px;
     padding-left: 25px;
     margin: 10px 10px 10px 10px;
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-hoVudTkJwe0muypUHJ0hz1jGJki95pajdqRDeUkHDhhv1O2d");
+    background-image: url("/images/paramoreh2img.jpg");
     background-size: contain;
 }
