--- a/paramore.css
+++ b/paramore.css
@@ -24,9 +24,10 @@ header {
     color: crimson;
 }
 
-a:hover {
-    color: aqua;
+li a:hover {
+    color: crimson;
     display: center;
+    font-size: 14px;
 }
 
 ul {
@@ -57,8 +58,12 @@ li a:hover:not(.active) {
     background-color: crimson;
 }
 
+.active:hover {
+    background-color: grey;
+}
+
 h2 {
-    color: crimson;
+    color: red;
     padding-top: 25px;
     padding-right: 25px;
     padding-bottom: 25px;
@@ -66,4 +71,6 @@ h2 {
     margin: 10px 10px 10px 10px;
     background-image: url("/images/paramoreh2img.jpg");
     background-size: contain;
+    border-radius: 5px;
+    text-align: center;
 }
